// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders with closed state by default 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 Dropdown__Container-sc-kuo6oi-0 escqfF ckFvxY leZDxE WUAyO"
      >
        <div
          aria-expanded="false"
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 Dropdown__MainContainer-sc-kuo6oi-1 escqfF ckFvxY fjNDtr gBRJMR"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__Title-sc-kuo6oi-2 escqfF cSOJYx"
          >
            Dropdown Title
          </div>
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ArrowContainer-sc-kuo6oi-3 escqfF iOARKP"
          >
            <svg
              data-testid="down-svg"
              height="24px"
              width="24px"
            />
          </div>
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ContentContainer-sc-kuo6oi-4 escqfF jJLOT"
        >
          <div
            data-testid="dropdown-content"
          >
            Dropdown Content
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 Dropdown__Container-sc-kuo6oi-0 escqfF ckFvxY leZDxE WUAyO"
    >
      <div
        aria-expanded="false"
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 Dropdown__MainContainer-sc-kuo6oi-1 escqfF ckFvxY fjNDtr gBRJMR"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__Title-sc-kuo6oi-2 escqfF cSOJYx"
        >
          Dropdown Title
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ArrowContainer-sc-kuo6oi-3 escqfF iOARKP"
        >
          <svg
            data-testid="down-svg"
            height="24px"
            width="24px"
          />
        </div>
      </div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ContentContainer-sc-kuo6oi-4 escqfF jJLOT"
      >
        <div
          data-testid="dropdown-content"
        >
          Dropdown Content
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`Dropdown renders without children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 Dropdown__Container-sc-kuo6oi-0 escqfF ckFvxY leZDxE WUAyO"
      >
        <div
          aria-expanded="false"
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 Dropdown__MainContainer-sc-kuo6oi-1 escqfF ckFvxY fjNDtr gBRJMR"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__Title-sc-kuo6oi-2 escqfF cSOJYx"
          >
            Dropdown Title
          </div>
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ArrowContainer-sc-kuo6oi-3 escqfF iOARKP"
          >
            <svg
              data-testid="down-svg"
              height="24px"
              width="24px"
            />
          </div>
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ContentContainer-sc-kuo6oi-4 escqfF jJLOT"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 Dropdown__Container-sc-kuo6oi-0 escqfF ckFvxY leZDxE WUAyO"
    >
      <div
        aria-expanded="false"
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 Dropdown__MainContainer-sc-kuo6oi-1 escqfF ckFvxY fjNDtr gBRJMR"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__Title-sc-kuo6oi-2 escqfF cSOJYx"
        >
          Dropdown Title
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ArrowContainer-sc-kuo6oi-3 escqfF iOARKP"
        >
          <svg
            data-testid="down-svg"
            height="24px"
            width="24px"
          />
        </div>
      </div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ContentContainer-sc-kuo6oi-4 escqfF jJLOT"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`Dropdown toggles open/close state on multiple clicks 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 Dropdown__Container-sc-kuo6oi-0 escqfF ckFvxY leZDxE WUAyO"
      >
        <div
          aria-expanded="false"
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 Dropdown__MainContainer-sc-kuo6oi-1 escqfF ckFvxY fjNDtr gBRJMR"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__Title-sc-kuo6oi-2 escqfF cSOJYx"
          >
            Dropdown Title
          </div>
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ArrowContainer-sc-kuo6oi-3 escqfF iOARKP"
          >
            <svg
              data-testid="down-svg"
              height="24px"
              width="24px"
            />
          </div>
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ContentContainer-sc-kuo6oi-4 escqfF jJLOT"
        >
          <div
            data-testid="dropdown-content"
          >
            Dropdown Content
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 Dropdown__Container-sc-kuo6oi-0 escqfF ckFvxY leZDxE WUAyO"
    >
      <div
        aria-expanded="false"
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 Dropdown__MainContainer-sc-kuo6oi-1 escqfF ckFvxY fjNDtr gBRJMR"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__Title-sc-kuo6oi-2 escqfF cSOJYx"
        >
          Dropdown Title
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ArrowContainer-sc-kuo6oi-3 escqfF iOARKP"
        >
          <svg
            data-testid="down-svg"
            height="24px"
            width="24px"
          />
        </div>
      </div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 Dropdown__ContentContainer-sc-kuo6oi-4 escqfF jJLOT"
      >
        <div
          data-testid="dropdown-content"
        >
          Dropdown Content
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
